--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 		</div>
 	<div id="panel"></div>
 	<div id="content">
-	
+
 </div>
 
 	<script>
@@ -89,8 +89,15 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 				<input type="button" onClick="document.getElementById('third').scrollIntoView('slow');"
 					 value="Contact"/>
 				 </div> -->
-
-
+<nav class="navigation">
+		<ul class="menu">
+			<li><a href="#Top"</a></li>
+			<li><a href="#About"</a></li>
+			<li><a href="#Portfolio"</a></li>
+			<li><a href="#Contact"</a></li>
+			</ul>
+		</nav>
+<div id="top"></div>
 <div id="about">
 	<h2> About Me </h2>
 		<p1>	I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
@@ -208,6 +215,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 /* The container <div> - needed to position the dropdown content */
 #dropDown{
+	position: fixed;
 	float:left;
 	width:20px;
 	height:24px;
