--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 			<li><a href="#Contact"</a></li>
 			</ul>
 		</nav>
+		<script type="text/javascript">
+jQuery(document).ready(function($) {
+
+  // Hook up the current state to the nav bar
+  $('.navigation').onePageNav();
+
+});
+</script>
 <div id="top"></div>
 <div id="about">
 	<h2> About Me </h2>
