--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 /* The container <div> - needed to position the dropdown content */
 #dropDown{
-//	position: fixed;
+	position: fixed;
 	float:left;
 	width:20px;
 	height:24px;
 	background:linear-gradient(#FFF, #DDD);
-	boarder: #AAA 1px solid;
+	border: #AAA 1px solid;
 	border-radius: 2px;
 	padding: 24px 28px;
 	cursor: pointer;
