--- a/index.html
+++ b/index.html
@@ -80,23 +80,23 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	</ul>
 </nav>
 </div> -->
-				<!--
-			<div class="row">
+
+			  <div class="row">
 				<input type="button" onClick="document.getElementById('first').scrollIntoView('slow');"
 					value="About Me"/>
 				<input type="button" onClick="document.getElementById('second').scrollIntoView('slow');"
 					value="Portfolio"/>
 				<input type="button" onClick="document.getElementById('third').scrollIntoView('slow');"
 					 value="Contact"/>
-				 </div> -->
-<nav class="navigation">
+				 </div>
+<!-- <nav class="navigation">
 		<ul class="menu">
 			<li><a href="#Top"</a></li>
 			<li><a href="#About"</a></li>
 			<li><a href="#Portfolio"</a></li>
 			<li><a href="#Contact"</a></li>
 			</ul>
-		</nav>
+		</nav> -->
 
 <div id="top"></div>
 <div id="about">
@@ -337,7 +337,7 @@ li a{
 	color:red;
 }*/
 /* top navigation */
-#nav {
+/*#nav {
   display: block;
   height: 35px;
   background-color: #131313;
@@ -418,7 +418,7 @@ nav{
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing:border-box;
-}
+}*/
 ul{
 	text-align: left;
 	font-size: 30px;
