--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </nav>
 </div> -->
 
-			  <div class="row">
+			  <!-- <div class="row">
 				<input type="button" onClick="document.getElementById('first').scrollIntoView('slow');"
 					value="About Me"/>
 				<input type="button" onClick="document.getElementById('second').scrollIntoView('slow');"
 					value="Portfolio"/>
 				<input type="button" onClick="document.getElementById('third').scrollIntoView('slow');"
 					 value="Contact"/>
-				 </div>
+				 </div> -->
 <!-- <nav class="navigation">
 		<ul class="menu">
 			<li><a href="#Top"</a></li>
@@ -216,7 +216,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 /* The container <div> - needed to position the dropdown content */
 #dropDown{
-	position: relative;
+	position: fixed;
 	float:left;
 	width:20px;
 	height:24px;
