--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 /* The container <div> - needed to position the dropdown content */
 #dropDown{
-	position: fixed;
+	position: relative;
 	float:right;
 	width:20px;
 	height:20px;
