--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </nav>
 </div> -->
 
-			  <!-- <div class="row">
-				<input type="button" onClick="document.getElementById('first').scrollIntoView('slow');"
+			  <div class="row">
+				<input type="button" onClick="document.getElementById('about').scrollIntoView('slow');"
 					value="About Me"/>
-				<input type="button" onClick="document.getElementById('second').scrollIntoView('slow');"
+				<input type="button" onClick="document.getElementById('portfolio').scrollIntoView('slow');"
 					value="Portfolio"/>
-				<input type="button" onClick="document.getElementById('third').scrollIntoView('slow');"
+				<input type="button" onClick="document.getElementById('contact').scrollIntoView('slow');"
 					 value="Contact"/>
-				 </div> -->
+				 </div>
 <!-- <nav class="navigation">
 		<ul class="menu">
 			<li><a href="#Top"</a></li>
@@ -220,8 +220,8 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 }
 
 /* The container <div> - needed to position the dropdown content */
-#dropDown{
-	position: fixed;
+/*#dropDown{
+	position: fixed ;
 	float:right;
 	width:20px;
 	height:20px;
@@ -267,7 +267,7 @@ background:#crimson;
 	margin-bottom: 0px;
 	padding-top: 20px;
 	padding-bottom: 4px;
-} -->*/
+} -->*/*/
 body{
 
 	font-family: Karla;
