--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 			<h1>Adam Wood</h1>
 			<p> Computer Science Student at Buffalo </p>
 </div>
-
+<!--
 	<div id="dropDown" onclick="toggleDD()">
 			<div></div>
 			<div></div>
@@ -53,7 +53,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 		cp.style.opacity = 1;
 	}
 }
-</script>
+</script> -->
 <!--
 <ul id="nav">
 	<li><a href="#">About</a></li>
@@ -76,7 +76,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav> -->
-</div>
+
 <!-- <nav id="navbar">
 	<ul id="fixednav">
 		<li id="banner"><a data-sectionid="about">About Me</a></li>
