--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	}
 }
 </script> -->
-<!--
+
 <ul id="nav">
 	<li><a href="#">About</a></li>
 	<li><a href="#">Portfolio</a></li>
 	<li><a href="#">Contact</a></li>
-</ul> -->
+</ul>
 
 	<!-- <div class="dropdown">
 		<button onclick="myfunction()" class="dropbtn">Navigation</button>
@@ -86,14 +86,14 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </nav>
 </div> -->
 
-			  <div class="row">
+			  <!-- <div class="row">
 				<input type="button" onClick="document.getElementById('about').scrollIntoView('slow');"
 					value="About Me"/>
 				<input type="button" onClick="document.getElementById('portfolio').scrollIntoView('slow');"
 					value="Portfolio"/>
 				<input type="button" onClick="document.getElementById('contact').scrollIntoView('slow');"
 					 value="Contact"/>
-				 </div>
+				 </div> -->
 <!-- <nav class="navigation">
 		<ul class="menu">
 			<li><a href="#Top"</a></li>
@@ -311,7 +311,7 @@ h5{
 	text-align: left;
 	font-size: 32px;
 }
-/*nav{
+nav{
 	white-space:nowrap;
 	width:100%;
 }
