--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 <body>
 			<div id="intro">
 			<h1>Adam Wood</h1>
-			<div id="illustration"><center><img src="C:\Users\Adam\Desktop\Logo.png"></center></div>
+			<div id="illustration"><center><img src="C:/Users/Adam/Desktop/Logo.png"></center></div>
 			<p> Computer Science Student at Buffalo </p>
 </div>
 			<nav>
