--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </div>
 </body>
 <style>
+html{
+	font-family: Karla;
+}
 #intro{
 	background-color: #304269;
 	color: white;
