--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 		<h5> First Semester </h5>
 		<li> American History (HIS 161) </li>
 		<li> Calculus I (MTH 141) </li>
-		<li Internet Class: UB Seminar (CSE 199) </li>
+		<li> Internet Class: UB Seminar (CSE 199) </li>
 		<li> Introduction to Computer Science I (CSE 115) </li>
 	</ul>
 	<ul style="list-style:square;">
@@ -90,7 +90,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </body>
 <style>
 html{
-	font-family: Karla;
+	font-family: 'Karla';
 }
 #intro{
 	background-color: #304269;
@@ -101,7 +101,6 @@ html{
 	padding-bottom: 4px;
 }
 body{
-  background-image: url("http://giphy.com/gif/26gJAFwg6xhrunIbu/html5");
 	background-size: cover;
 	font-family: Karla;
 	margin:0;
