--- a/index.html
+++ b/index.html
@@ -54,29 +54,29 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 			  estate on my free time. </p1>
 </div>
 <div id="portfolio">
-	  <h2> Portfolio </h2>
-		<h3> Relevant Coursework </h3>
-		<h4> High School </h4>
+	  <h2 style="color:#222;"> Portfolio </h2>
+		<h3 style="color:#222;"> Relevant Coursework </h3>
+		<h4 style="color:#222;"> High School </h4>
 		<ul>
-		<li> Design and Drawing for Production B </li>
-		<li> Digital Electronics </li>
-		<li> Principles of Engineering </li>
-		<li> AP: Biology, Calculus, Computer Science </li>
-		<h4> School of Engineering and Applies Sciences at the University at Buffalo</h4>
+		<li style="color:#222;"> Design and Drawing for Production B </li>
+		<li style="color:#222;"> Digital Electronics </li>
+		<li style="color:#222;"> Principles of Engineering </li>
+		<li style="color:#222;"> AP: Biology, Calculus, Computer Science </li>
+		<h4 style="color:#222;"> School of Engineering and Applies Sciences at the University at Buffalo</h4>
 	</ul>
 	<ul style="list-style:square;">
-		<h5> First Semester </h5>
-		<li> American History (HIS 161) </li>
-		<li> Calculus I (MTH 141) </li>
-		<li> Internet Class: UB Seminar (CSE 199) </li>
-		<li> Introduction to Computer Science I (CSE 115) </li>
+		<h5 style="color:#222;"> First Semester </h5>
+		<li style="color:#222;"> American History (HIS 161) </li>
+		<li style="color:#222;"> Calculus I (MTH 141) </li>
+		<li style="color:#222;"> Internet Class: UB Seminar (CSE 199) </li>
+		<li style="color:#222;"> Introduction to Computer Science I (CSE 115) </li>
 	</ul>
 	<ul style="list-style:square;">
-		<h5> Second Semester (Upcoming Spring 2017) </h5>
-		<li> Calculus II (MTH 142) </li>
-		<li> Introduction to Computer Science II (CSE 116) </li>
-		<li> Introduction to Discrete Structures (CSE 191) </li>
-		<li> Digital Systems (CSE 241) </li>
+		<h5 style="color:#222;"> Second Semester (Upcoming Spring 2017) </h5>
+		<li style="color:#222;"> Calculus II (MTH 142) </li>
+		<li style="color:#222;"> Introduction to Computer Science II (CSE 116) </li>
+		<li style="color:#222;"> Introduction to Discrete Structures (CSE 191) </li>
+		<li style="color:#222;"> Digital Systems (CSE 241) </li>
 	</ul>
 	</div>
 	<div id="contact">
