--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@ html{
 }
 body{
 	background-size: cover;
-	font-family: 'Karla';
+	font-family: lucida;
 	margin:0;
 }
 h1{
-	font-family: 'Karla';
+	font-family: lucida;
 	text-align: center;
 	font-size: 100px;
 	padding: 150x 0px 50px 0px;
 }
 p{
-	font-family: 'Karla';
+	font-family: lucida;
 	text-align: center;
 	font-size: 60px;
 	padding: 0px 0px 90px 0px;
