--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </body>
 <style>
 html{
-	font-family: 'Karla';
+	font-family: 'Inonsolata';
 }
 #intro{
 	background-color: #304269;
@@ -102,17 +102,17 @@ html{
 }
 body{
 	background-size: cover;
-	font-family: lucida;
+	font-family: 'Inonsolata';
 	margin:0;
 }
 h1{
-	font-family: lucida;
+	font-family: 'Inonsolata';
 	text-align: center;
 	font-size: 100px;
 	padding: 150x 0px 50px 0px;
 }
 p{
-	font-family: lucida;
+	font-family: 'Inonsolata';
 	text-align: center;
 	font-size: 60px;
 	padding: 0px 0px 90px 0px;
