--- a/index.html
+++ b/index.html
@@ -114,34 +114,34 @@ h1{
 p{
 	font-family: 'Inonsolata';
 	text-align: center;
-	font-size: 60px;
-	padding: 0px 0px 90px 0px;
+	font-size: 60%;
+		padding: 0px 0px 90px 0px;
 }
 .row{
 	text-align: center;
-	font-size: 40px;
+	font-size: 40%;
 }
 p1{
 	text-align: center;
-	font-size: 30px;
+	font-size: 30%;
 	padding-left: 80px;
 	padding-right: 80px;
 }
 h2{
 	text-align: center;
-	font-size: 50px;
+	font-size: 50%;
 }
 h3{
 	text-align: left;
-	font-size: 42px;
+	font-size: 42%;
 }
 h4{
 	text-align: left;
-	font-size: 35px;
+	font-size: 35%;
 }
 h5{
 	text-align: left;
-	font-size: 32px;
+	font-size: 32%;
 }
 nav{
 	white-space:nowrap;
@@ -189,7 +189,7 @@ li a{
 }
 ul{
 	text-align: left;
-	font-size: 30px;
+	font-size: 30%;
 }
 #about{
 	background-color:#4C5364;
