--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </body>
 <style>
 html{
-	font-family: 'Inonsolata';
+	font-family: "Lucida Console", monospace;
 }
 #intro{
 	background-color: #304269;
@@ -102,46 +102,46 @@ html{
 }
 body{
 	background-size: cover;
-	font-family: 'Inonsolata';
+	font-family: "Lucida Console", monospace;
 	margin:0;
 }
 h1{
-	font-family: 'Inonsolata';
+	font-family: "Lucida Console", monospace;
 	text-align: center;
-	font-size: 80px;
+	font-size: 100px;
 	padding: 150x 0px 50px 0px;
 }
 p{
-	font-family: 'Inonsolata';
+	font-family: "Lucida Console", monospace;
 	text-align: center;
-	font-size: 80%;
-		padding: 0px 0px 90px 0px;
+	font-size: 60px;
+	padding: 0px 0px 90px 0px;
 }
 .row{
 	text-align: center;
-	font-size: 60%;
+	font-size: 40px;
 }
 p1{
 	text-align: center;
-	font-size: 30%;
+	font-size: 30px;
 	padding-left: 80px;
 	padding-right: 80px;
 }
 h2{
 	text-align: center;
-	font-size: 50%;
+	font-size: 50px;
 }
 h3{
 	text-align: left;
-	font-size: 42%;
+	font-size: 42px;
 }
 h4{
 	text-align: left;
-	font-size: 35%;
+	font-size: 35px;
 }
 h5{
 	text-align: left;
-	font-size: 32%;
+	font-size: 32px;
 }
 nav{
 	white-space:nowrap;
@@ -189,7 +189,7 @@ li a{
 }
 ul{
 	text-align: left;
-	font-size: 30%;
+	font-size: 30px;
 }
 #about{
 	background-color:#4C5364;
