--- a/index.html
+++ b/index.html
@@ -106,15 +106,15 @@ body{
 	margin:0;
 }
 h1{
-	font-family: "Lucida Console", monospace;
+	font-family:  "Trebuchet MS" , sans-serif;
 	text-align: center;
-	font-size: 100px;
+	font-size: 72px;
 	padding: 150x 0px 50px 0px;
 }
 p{
 	font-family: "Lucida Console", monospace;
 	text-align: center;
-	font-size: 60px;
+	font-size: 50px;
 	padding: 0px 0px 90px 0px;
 }
 .row{
@@ -123,13 +123,13 @@ p{
 }
 p1{
 	text-align: center;
-	font-size: 30px;
+	font-size: 24px;
 	padding-left: 80px;
 	padding-right: 80px;
 }
 h2{
 	text-align: center;
-	font-size: 50px;
+	font-size: 40px;
 }
 h3{
 	text-align: left;
