--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@ ul{
 	color:white;
 	font-weight: lighter;
 	padding: 30px 25px 50px 32px;
+	margin-left: 50px;
+	margin-right: 50px;
 }
 #portfolio{
 	background-color: #ddd;
