--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 		<li style="color:#222;"> Digital Electronics </li>
 		<li style="color:#222;"> Principles of Engineering </li>
 		<li style="color:#222;"> AP: Biology, Calculus, Computer Science </li>
-		<h4 style="color:#222;"> School of Engineering and Applies Sciences at the University at Buffalo</h4>
+		<h4 style="color:#222;"> School of Engineering and Applies Sciences @ SUNY Buffalo</h4>
 	</ul>
 	<ul style="list-style:square;">
 		<h5 style="color:#222;"> First Semester </h5>
