--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 				</ul>
 			</nav>
 </div>
-				<!--
+	<div id="wrapper">
+
+		<!--
+
 			<div class="row">
 				<input type="button" onClick="document.getElementById('first').scrollIntoView('slow');"
 					value="About Me"/>
@@ -87,6 +90,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 <li style="text-align:center;"> <a href="https://github.com/agwood2/" target="_blank"> GitHub Account </a></li>
 	</ul>
 </div>
+</div>
 </body>
 <style>
 html{
@@ -117,9 +121,9 @@ p{
 	font-size: 50px;
 	padding: 0px 0px 90px 0px;
 }
-.row{
+/*.row{
 	text-align: center;
-	font-size: 40px;
+	font-size: 40px;*/
 }
 p1{
 	text-align: center;
@@ -176,6 +180,7 @@ li a{
 	background-color: #333;
 	text-align: center;
 //	padding: 25px 0px 25px 0px;
+transition: height 0.3s linear 0s, padding 0.3s linear 0s;
 }
 #banner a{
 	display:block;
