--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@ function yScroll(){
 	 }
 }
 </script>
+<script type="text/javascript">
+
+</script>
 </head>
 <body>
 			<div id="intro">
@@ -42,9 +45,9 @@ function yScroll(){
 </div>
 			<nav id="menu">
 				<ul>
-					<li id="banner"><a data-sectionid="about">About Me</a></li>
-					<li id="banner"><a data-sectionid="portfolio">Portfolio</a></li>
-					<li id="banner"><a data-sectionid="contact">Contact</a></li>
+					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo();">About Me</a></li>
+					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo();">Portfolio</a></li>
+					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo();">Contact</a></li>
 				</ul>
 			</nav>
 </div>
