--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ function yScroll(){
 </div>
 			<nav id="menu">
 				<ul>
-					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo();">About Me</a></li>
-					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo();">Portfolio</a></li>
-					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo();">Contact</a></li>
+					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo('about');">About Me</a></li>
+					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo('portfolio');">Portfolio</a></li>
+					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo('contact');">Contact</a></li>
 				</ul>
 			</nav>
 </div>
