--- a/index.html
+++ b/index.html
@@ -34,7 +34,28 @@ function yScroll(){
 }
 </script>
 <script type="text/javascript">
-
+var scrollY = 0;
+var distance = 40;
+var speed = 24;
+function autoScrollTo(section){
+	var currentY = window.pageYOffset;
+	var targetY = document.getElementById(section).offsetTop;
+	var bodyHeight = document.body.offsetHeight;
+	var yPos = currentY + window.innerHeight;
+	var animator = setTimeout('autoScrollTo(\' '+section+' \')', speed);
+	if(yPos > bodyHeight){
+		clearTimeout(animator);
+	}
+	else{
+		if(currentY < targetY-distance){
+			scrollY = currentY+distance;
+			window.scroll(0, scrollY);
+		}
+		else{
+			clearTimeout(animator);
+		}
+	}
+}
 </script>
 </head>
 <body>
