--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ function autoScrollTo(section){
 	else{
 		if(currentY < targetY-distance){
 			scrollY = currentY+distance;
-			window.scroll(0, section);
+			window.scroll(0, targetY);
 		}
 		else{
 			clearTimeout(animator);
