--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@ function autoScrollTo(section){
 			<nav id="menu">
 				<ul>
 					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo('about');">About Me</a></li>
-					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo('portfolio');">Portfolio</a></li>
+					<li id="banner"><a href="#" onclick="autoScrollTo('portfolio');">Portfolio</a></li>
 					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo('contact');">Contact</a></li>
 				</ul>
 			</nav>
 </div>
-	<div id="wrapper">
+
 
 		<!--
 
@@ -128,7 +128,7 @@ function autoScrollTo(section){
 <li style="text-align:center;"> <a href="https://github.com/agwood2/" target="_blank"> GitHub Account </a></li>
 	</ul>
 </div>
-</div>
+
 </body>
 <style>
 html{
