--- a/index.html
+++ b/index.html
@@ -37,23 +37,24 @@ function yScroll(){
 var scrollY = 0;
 var distance = 40;
 var speed = 24;
-function autoScrollTo(section){
+var scrollY = 0;
+var distance = 40;
+var speed = 24;
+function autoScrollTo(el) {
 	var currentY = window.pageYOffset;
-	var targetY = document.getElementById(section).offsetTop;
+	var targetY = document.getElementById(el).offsetTop;
 	var bodyHeight = document.body.offsetHeight;
 	var yPos = currentY + window.innerHeight;
-	var animator = setTimeout('autoScrollTo(\' '+section+' \')', speed);
+	var animator = setTimeout('autoScrollTo(\''+el+'\')',24);
 	if(yPos > bodyHeight){
 		clearTimeout(animator);
-	}
-	else{
-		if(currentY < targetY){
-			scrollY = currentY+distance;
-			window.scroll(0, scrollY);
-		}
-		// else{
-		// 	clearTimeout(animator);
-		// }
+	} else {
+		if(currentY < targetY-distance){
+		    scrollY = currentY+distance;
+		    window.scroll(0, scrollY);
+	    } else {
+		    clearTimeout(animator);
+	    }
 	}
 }
 </script>
@@ -66,9 +67,9 @@ function autoScrollTo(section){
 </div>
 			<nav id="menu">
 				<ul>
-					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo("about");">About Me</a></li>
-					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo("portfolio");">Portfolio</a></li>
-					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo("contact");">Contact</a></li>
+					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo('about');">About Me</a></li>
+					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo('portfolio');">Portfolio</a></li>
+					<li id="banner"><a href="#" onclick="return false;" onmousedown="autoScrollTo('contact');">Contact</a></li>
 				</ul>
 			</nav>
 </div>
