--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ function autoScrollTo(el) {
 		if(currentY < targetY-distance){
 		    scrollY = currentY+distance;
 		    window.scroll(0, scrollY);
+				clearTimeout(animator);
 	    } else {
 		    clearTimeout(animator);
 	    }
