--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@ var distance = 40;
 var speed = 24;
 var scrollY = 0;
 var distance = 40;
-var speed = 24;
+var speed = 18;
 function autoScrollTo(el) {
 	var currentY = window.pageYOffset;
 	var targetY = document.getElementById(el).offsetTop;
 	var bodyHeight = document.body.offsetHeight;
 	var yPos = currentY + window.innerHeight;
-	var animator = setTimeout('autoScrollTo(\''+el+'\')',24);
+	var animator = setTimeout('autoScrollTo(\''+el+'\')',18);
 	if(yPos > bodyHeight){
 		clearTimeout(animator);
 	} else {
@@ -250,9 +250,12 @@ ul{
 	font-weight: lighter;
 	padding: 40px 0px 30px 60px;
 }
+#contact ul li{
+	margin-bottom: 15px;
+}
 #contact{
 	margin-top: 0px;
-	background:black;
+	background:#333;
 	color:white;
 	text-align: center;
 	padding: 30px 0px 10px 0px;
