--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ function autoScrollTo(el) {
 		<ul style="list-style:none;">
 <li style="text-align:center;"> Email: agwood2@buffalo.edu </li>
 <li style="text-align:center;"> Email: agwood12@gmail.com </li>
-<li style="text-align:center;"> <a href="https://github.com/agwood2/" target="_blank"> GitHub Account </a></li>
+<li style="text-align:center;"> <a href="https://github.com/agwood2/"> GitHub Account </a></li>
 	</ul>
 </div>
 
