--- a/index.html
+++ b/index.html
@@ -250,14 +250,9 @@ ul{
 	font-weight: lighter;
 	padding: 40px 0px 30px 60px;
 }
-#contact ul li{
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
-
 #contact{
 	margin-top: 0px;
-	background:#333;
+	background:black;
 	color:white;
 	text-align: center;
 	padding: 30px 0px 10px 0px;
