--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@ function yScroll(){
 	pagetop = document.getElementById('banner');
 	yPos = window.pageYOffset;
 	if(yPos > 220){
-		pagetop.style.position = top;
+		pagetop.style.position = fixed;
+		pagetop.style.float = top;
 	} else {
 		pagetop.style.height = "120px";
 		pagetop.style.paddingTop = "50px";
